Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.9.0-beta1
-
Fix Version/s: Qt Creator 4.9.0
-
Component/s: Version Control Integration
-
Environment:Ubuntu 16.04 x64
git 2.7.4
-
Platform/s:
-
Commits:f1665c02aa3dece978278e3a64b60740f378d6b3 (qt-creator/qt-creator/4.9)
Description
The following lines two lines:
Rebasing (3/3) Sucessfully rebased and updated refs/heads/master.
appear in one line:
Rebasing (3/3) Sucessfully rebased and updated refs/heads/master.
and the second part is red, which indicates it comes from standard error output.
This has not been the case in Creator 4.8, which just displayed (in red):
Sucessfully rebased and updated refs/heads/master.
This seems to be introduced by the new CR handling in Creator 4.9